--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guida Viaggio</title>
-    <link href="static/tailwind.min.css" rel="stylesheet">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="static/icon.png">
-    <meta name="theme-color" content="#0f4c81">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Guida Viaggio</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="static/icon.png">
+  <meta name="theme-color" content="#0f4c81">
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <h1 class="text-3xl font-bold mb-6">📍 Itinerario di Viaggio</h1>
