--- a/mercoledi---2307--in-viaggio-verso-gedda.html
+++ b/mercoledi---2307--in-viaggio-verso-gedda.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mercoledi - 23/07 – In viaggio verso Gedda</title>
-    <link href="static/tailwind.min.css" rel="stylesheet">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="static/icon.png">
-    <meta name="theme-color" content="#0f4c81">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mercoledi - 23/07 – In viaggio verso Gedda</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="static/icon.png">
+  <meta name="theme-color" content="#0f4c81">
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
@@ -28,45 +28,46 @@
 <img src='static/jedda.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Volo per Gedda</p><p class='text-sm mb-1'>RM-MI (WizzAir) 12:50–19:15 – N.Volo W463919</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H1 - Check-in hotel - ore 20:30/21 (3 notti 23-24 / 24-25 / 25-26)</p><p class='text-sm mb-1'>Rosemond Al Hamra - Al Uqsar Street Al Hamra District, Jeddah, Al Hamra, 21382 Gedda</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <p class='text-gray-600 break-words'>https://www.booking.com/hotel/sa/address-al-hamra.it.html?aid=311984&label=address-al-hamra-r069upSh2TDMgbnVst8XXQS541222572163%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-2296550163331%3Alp1006094%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YTQUGSsRwx9_3qo3uPTHyoo&sid=3fce56a417f998954d5d00812c0ecde3&age=0&all_sr_blocks=395356801_398771686_2_2_0_411329&checkin=2025-07-27&checkout=2025-07-30&dest_id=-3096108&dest_type=city&dist=0&group_adults=2&group_children=1&hapos=1&highlighted_blocks=395356801_398771686_2_2_0_411329&hpos=1&matching_block_id=395356801_398771686_2_2_0_411329&no_rooms=1&req_adults=2&req_age=0&req_children=1&room1=A%2CA%2C0&sb_price_type=total&sr_order=popularity&sr_pri_blocks=395356801_398771686_2_2_0_411329_95362&srepoch=1745683242&srpvid=4a347092d0160449&type=total&ucfs=1&</p>
+  <a href="https://www.booking.com/hotel/sa/address-al-hamra.it.html?aid=311984&label=address-al-hamra-r069upSh2TDMgbnVst8XXQS541222572163%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-2296550163331%3Alp1006094%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YTQUGSsRwx9_3qo3uPTHyoo&sid=3fce56a417f998954d5d00812c0ecde3&age=0&all_sr_blocks=395356801_398771686_2_2_0_411329&checkin=2025-07-27&checkout=2025-07-30&dest_id=-3096108&dest_type=city&dist=0&group_adults=2&group_children=1&hapos=1&highlighted_blocks=395356801_398771686_2_2_0_411329&hpos=1&matching_block_id=395356801_398771686_2_2_0_411329&no_rooms=1&req_adults=2&req_age=0&req_children=1&room1=A%2CA%2C0&sb_price_type=total&sr_order=popularity&sr_pri_blocks=395356801_398771686_2_2_0_411329_95362&srepoch=1745683242&srpvid=4a347092d0160449&type=total&ucfs=1&" target="_blank" class="text-blue-600 underline break-words">https://www.booking.com/hotel/sa/address-al-hamra.it.html?aid=311984&label=address-al-hamra-r069upSh2TDMgbnVst8XXQS541222572163%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-2296550163331%3Alp1006094%3Ali%3Adec%3Adm%3Appccp%3DUmFuZG9tSVYkc2RlIyh9YTQUGSsRwx9_3qo3uPTHyoo&sid=3fce56a417f998954d5d00812c0ecde3&age=0&all_sr_blocks=395356801_398771686_2_2_0_411329&checkin=2025-07-27&checkout=2025-07-30&dest_id=-3096108&dest_type=city&dist=0&group_adults=2&group_children=1&hapos=1&highlighted_blocks=395356801_398771686_2_2_0_411329&hpos=1&matching_block_id=395356801_398771686_2_2_0_411329&no_rooms=1&req_adults=2&req_age=0&req_children=1&room1=A%2CA%2C0&sb_price_type=total&sr_order=popularity&sr_pri_blocks=395356801_398771686_2_2_0_411329_95362&srepoch=1745683242&srpvid=4a347092d0160449&type=total&ucfs=1&</a>
 </details>
 </div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>Extra</p><p class='text-base font-semibold text-gray-800 mt-1'>📍Posizione hotel</p><p class='text-sm mb-1'>Visualizza su Google Maps</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <p class='text-gray-600 break-words'>https://maps.app.goo.gl/bB7WLqjEjQd3kiJ88?g_st=com.google.maps.preview.copy</p>
+  <a href="https://maps.app.goo.gl/bB7WLqjEjQd3kiJ88?g_st=com.google.maps.preview.copy" target="_blank" class="text-blue-600 underline break-words">https://maps.app.goo.gl/bB7WLqjEjQd3kiJ88?g_st=com.google.maps.preview.copy</a>
 </details>
 </div>
 <div class='bg-pink-50 border border-pink-200 p-4 rounded-xl shadow mt-10'>
-    <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
-    <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
-    <a href="https://photos.google.com/share/AF1QipPip3bOnx8bNPVfWOa4WSU3Tb5oTgUc5uNFc1iA5elgXvqkeXDjkzER9Yd3RF8qCg" target="_blank" class="text-pink-600 underline font-medium">
-        Vai all'album su Google Foto
-    </a>
+  <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
+  <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
+  <a href="https://photos.google.com/share/AF1QipPip3bOnx8bNPVfWOa4WSU3Tb5oTgUc5uNFc1iA5elgXvqkeXDjkzER9Yd3RF8qCg"
+     target="_blank" class="text-pink-600 underline font-medium">
+    Vai all'album su Google Foto
+  </a>
 </div>
 <div class='mt-10 flex justify-between'><a href='martedi---2207--in-viaggio-verso-gedda.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='giovedi---2407--scoperta-di-gedda.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
-    <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
-    <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
+  <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
+  <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
 </div>
 
 <script>
-    const key = "voto_" + window.location.pathname;
-    const starsEl = document.getElementById("stars");
+  const key = "voto_" + window.location.pathname;
+  const starsEl = document.getElementById("stars");
 
-    function renderStars(rating) {
-        starsEl.innerHTML = "";
-        for (let i = 1; i <= 5; i++) {
-            const star = document.createElement("span");
-            star.textContent = i <= rating ? "★" : "☆";
-            star.style.color = "#fbbf24";
-            star.onclick = () => {
-                localStorage.setItem(key, i);
-                renderStars(i);
-            };
-            starsEl.appendChild(star);
-        }
+  function renderStars(rating) {
+    starsEl.innerHTML = "";
+    for (let i = 1; i <= 5; i++) {
+      const star = document.createElement("span");
+      star.textContent = i <= rating ? "★" : "☆";
+      star.style.color = "#fbbf24";
+      star.onclick = () => {
+        localStorage.setItem(key, i);
+        renderStars(i);
+      };
+      starsEl.appendChild(star);
     }
+  }
 
-    renderStars(parseInt(localStorage.getItem(key)) || 0);
+  renderStars(parseInt(localStorage.getItem(key)) || 0);
 </script>
 </body></html>
