--- a/0108--direzione-vulcano-kawah-ijen.html
+++ b/0108--direzione-vulcano-kawah-ijen.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>01/08 – Direzione Vulcano Kawah ijen🌋</title>
-    <link href="static/tailwind.min.css" rel="stylesheet">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="static/icon.png">
-    <meta name="theme-color" content="#0f4c81">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>01/08 – Direzione Vulcano Kawah ijen🌋</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="static/icon.png">
+  <meta name="theme-color" content="#0f4c81">
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
@@ -28,45 +28,46 @@
 <img src='static/vulcanoblu.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Da Cemoro Lawan a Probolinggo</p><p class='text-sm mb-1'>Taxi/van 2h - Al mattino dopo essersi riposati</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Da Probolinggo a Banyuwangi</p><p class='text-sm mb-1'>15:40-19:34/16:58-21:04 (4h) - l'albergo si trova a dieci minuti dalla stazione dei treni</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H5 - Didu's Home stay Bed & Breakfast - Check in dalle 13:00 (COMUNICARE IN ANTICIPO L'ORARIO DI ARRIVO)(1 notte - 1-2)</p><p class='text-sm mb-1'>Dusun Watulo RT01/RW01 Desa Rejosari Kecamatan Glagah, 68432 Banyuwangi, Indonesia</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <p class='text-gray-600 break-words'>https://www.booking.com/hotel/id/didu-39-s-homestay-bed-amp-breakfast.it.html?aid=356980&label=gog235jc-1FCAsoaEIkZGlkdS0zOS1zLWhvbWVzdGF5LWJlZC1hbXAtYnJlYWtmYXN0SA1YA2hNiAEBmAEUuAEHyAEM2AEB6AEB-AEMiAIBqAIDuALO-_vBBsACAdICJGU1MWM2YTUwLTIwZjMtNDAzMi04NDk4LTgxOGQ2MzQyYmMxY9gCBuACAQ&sid=368f8b8d1a7bc21703d69573a0752918&checkin=2025-06-24&checkout=2025-07-01&dest_id=-2671874&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=1&hpos=1&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&soh=1&sr_order=popularity&srepoch=1748958767&srpvid=e26e6168108d0096&type=total&ucfs=1&#no_availability_msg</p>
+  <a href="https://www.booking.com/hotel/id/didu-39-s-homestay-bed-amp-breakfast.it.html?aid=356980&label=gog235jc-1FCAsoaEIkZGlkdS0zOS1zLWhvbWVzdGF5LWJlZC1hbXAtYnJlYWtmYXN0SA1YA2hNiAEBmAEUuAEHyAEM2AEB6AEB-AEMiAIBqAIDuALO-_vBBsACAdICJGU1MWM2YTUwLTIwZjMtNDAzMi04NDk4LTgxOGQ2MzQyYmMxY9gCBuACAQ&sid=368f8b8d1a7bc21703d69573a0752918&checkin=2025-06-24&checkout=2025-07-01&dest_id=-2671874&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=1&hpos=1&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&soh=1&sr_order=popularity&srepoch=1748958767&srpvid=e26e6168108d0096&type=total&ucfs=1&#no_availability_msg" target="_blank" class="text-blue-600 underline break-words">https://www.booking.com/hotel/id/didu-39-s-homestay-bed-amp-breakfast.it.html?aid=356980&label=gog235jc-1FCAsoaEIkZGlkdS0zOS1zLWhvbWVzdGF5LWJlZC1hbXAtYnJlYWtmYXN0SA1YA2hNiAEBmAEUuAEHyAEM2AEB6AEB-AEMiAIBqAIDuALO-_vBBsACAdICJGU1MWM2YTUwLTIwZjMtNDAzMi04NDk4LTgxOGQ2MzQyYmMxY9gCBuACAQ&sid=368f8b8d1a7bc21703d69573a0752918&checkin=2025-06-24&checkout=2025-07-01&dest_id=-2671874&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=1&hpos=1&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&soh=1&sr_order=popularity&srepoch=1748958767&srpvid=e26e6168108d0096&type=total&ucfs=1&#no_availability_msg</a>
 </details>
 </div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Escursione notturna (NOTTE TRA IL 1 E IL 2) al vulcano Kawah Ijen</p><p class='text-sm mb-1'>partenza di notte per vedere l'alba, rientro in hotel per colazione e riposo - Portare vestiti pesanti e scarpe da trekking, acqua e snack</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>Extra</p><p class='text-base font-semibold text-gray-800 mt-1'>📍Posizione hotel</p><p class='text-sm mb-1'>Visualizza su Google Maps</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <p class='text-gray-600 break-words'>https://maps.app.goo.gl/3oxcFj1wvTA7LViU9?g_st=com.google.maps.preview.copy</p>
+  <a href="https://maps.app.goo.gl/3oxcFj1wvTA7LViU9?g_st=com.google.maps.preview.copy" target="_blank" class="text-blue-600 underline break-words">https://maps.app.goo.gl/3oxcFj1wvTA7LViU9?g_st=com.google.maps.preview.copy</a>
 </details>
 </div>
 <div class='bg-pink-50 border border-pink-200 p-4 rounded-xl shadow mt-10'>
-    <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
-    <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
-    <a href="https://photos.google.com/share/AF1QipPip3bOnx8bNPVfWOa4WSU3Tb5oTgUc5uNFc1iA5elgXvqkeXDjkzER9Yd3RF8qCg" target="_blank" class="text-pink-600 underline font-medium">
-        Vai all'album su Google Foto
-    </a>
+  <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
+  <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
+  <a href="https://photos.google.com/share/AF1QipPip3bOnx8bNPVfWOa4WSU3Tb5oTgUc5uNFc1iA5elgXvqkeXDjkzER9Yd3RF8qCg"
+     target="_blank" class="text-pink-600 underline font-medium">
+    Vai all'album su Google Foto
+  </a>
 </div>
 <div class='mt-10 flex justify-between'><a href='3107--direzione-monte-bromo.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='208--direzione-pemuteran.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
-    <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
-    <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
+  <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
+  <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
 </div>
 
 <script>
-    const key = "voto_" + window.location.pathname;
-    const starsEl = document.getElementById("stars");
+  const key = "voto_" + window.location.pathname;
+  const starsEl = document.getElementById("stars");
 
-    function renderStars(rating) {
-        starsEl.innerHTML = "";
-        for (let i = 1; i <= 5; i++) {
-            const star = document.createElement("span");
-            star.textContent = i <= rating ? "★" : "☆";
-            star.style.color = "#fbbf24";
-            star.onclick = () => {
-                localStorage.setItem(key, i);
-                renderStars(i);
-            };
-            starsEl.appendChild(star);
-        }
+  function renderStars(rating) {
+    starsEl.innerHTML = "";
+    for (let i = 1; i <= 5; i++) {
+      const star = document.createElement("span");
+      star.textContent = i <= rating ? "★" : "☆";
+      star.style.color = "#fbbf24";
+      star.onclick = () => {
+        localStorage.setItem(key, i);
+        renderStars(i);
+      };
+      starsEl.appendChild(star);
     }
+  }
 
-    renderStars(parseInt(localStorage.getItem(key)) || 0);
+  renderStars(parseInt(localStorage.getItem(key)) || 0);
 </script>
 </body></html>
