--- a/3-508--direzione-pemuteran.html
+++ b/3-508--direzione-pemuteran.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3-5/08 – Direzione Pemuteran🏝️</title>
-    <link href="static/tailwind.min.css" rel="stylesheet">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="static/icon.png">
-    <meta name="theme-color" content="#0f4c81">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>3-5/08 – Direzione Pemuteran🏝️</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="static/icon.png">
+  <meta name="theme-color" content="#0f4c81">
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
@@ -28,45 +28,46 @@
 <img src='static/pemuteran.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Spiagge e snorkeling</p><p class='text-sm mb-1'>Pemuteran Beach - White Sand Beach - Snorkeling Biorock Pemuteran</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H6 - Mango Moon (4 notti - 2-3 / 3-4 / 4-5 / 5-6) - Check in dalle 12:00</p><p class='text-sm mb-1'>Jl. Singaraja - Gilimanuk, Pemuteran - Buleleng, 81155 Pemuteran, Indonesia - COLAZIONE INCLUSA</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <p class='text-gray-600 break-words'>https://www.booking.com/hotel/id/mango-moon.it.html?label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%253Apl%253Ata%253Ap1%253Ap2%253Aac%253Aap%253Aneg%253Afi%253Atikwd-65526620%253Alp1006094%253Ali%253Adec%253Adm&sid=78f0340a13f2da4a5cd345993fe9c31c&aid=2311236&ucfs=1&checkin=2025-08-02&checkout=2025-08-06&dest_id=900048175&dest_type=city&group_adults=2&no_rooms=1&group_children=0&nflt=review_score%3D80%3Broomfacility%3D38%3Bfc%3D2%3Bmealplan%3D1&srpvid=15c57f7d968b0061&srepoch=1746900923&matching_block_id=139643002_122567517_2_1_0&atlas_src=sr_iw_title#tab-main</p>
+  <a href="https://www.booking.com/hotel/id/mango-moon.it.html?label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%253Apl%253Ata%253Ap1%253Ap2%253Aac%253Aap%253Aneg%253Afi%253Atikwd-65526620%253Alp1006094%253Ali%253Adec%253Adm&sid=78f0340a13f2da4a5cd345993fe9c31c&aid=2311236&ucfs=1&checkin=2025-08-02&checkout=2025-08-06&dest_id=900048175&dest_type=city&group_adults=2&no_rooms=1&group_children=0&nflt=review_score%3D80%3Broomfacility%3D38%3Bfc%3D2%3Bmealplan%3D1&srpvid=15c57f7d968b0061&srepoch=1746900923&matching_block_id=139643002_122567517_2_1_0&atlas_src=sr_iw_title#tab-main" target="_blank" class="text-blue-600 underline break-words">https://www.booking.com/hotel/id/mango-moon.it.html?label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%253Apl%253Ata%253Ap1%253Ap2%253Aac%253Aap%253Aneg%253Afi%253Atikwd-65526620%253Alp1006094%253Ali%253Adec%253Adm&sid=78f0340a13f2da4a5cd345993fe9c31c&aid=2311236&ucfs=1&checkin=2025-08-02&checkout=2025-08-06&dest_id=900048175&dest_type=city&group_adults=2&no_rooms=1&group_children=0&nflt=review_score%3D80%3Broomfacility%3D38%3Bfc%3D2%3Bmealplan%3D1&srpvid=15c57f7d968b0061&srepoch=1746900923&matching_block_id=139643002_122567517_2_1_0&atlas_src=sr_iw_title#tab-main</a>
 </details>
 </div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>Extra</p><p class='text-base font-semibold text-gray-800 mt-1'>📍Posizione hotel</p><p class='text-sm mb-1'>Visualizza su Google Maps</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <p class='text-gray-600 break-words'>https://maps.app.goo.gl/q7t5NJBm9achqtEcA?g_st=com.google.maps.preview.copy</p>
+  <a href="https://maps.app.goo.gl/q7t5NJBm9achqtEcA?g_st=com.google.maps.preview.copy" target="_blank" class="text-blue-600 underline break-words">https://maps.app.goo.gl/q7t5NJBm9achqtEcA?g_st=com.google.maps.preview.copy</a>
 </details>
 </div>
 <div class='bg-pink-50 border border-pink-200 p-4 rounded-xl shadow mt-10'>
-    <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
-    <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
-    <a href="https://photos.google.com/share/AF1QipPip3bOnx8bNPVfWOa4WSU3Tb5oTgUc5uNFc1iA5elgXvqkeXDjkzER9Yd3RF8qCg" target="_blank" class="text-pink-600 underline font-medium">
-        Vai all'album su Google Foto
-    </a>
+  <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
+  <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
+  <a href="https://photos.google.com/share/AF1QipPip3bOnx8bNPVfWOa4WSU3Tb5oTgUc5uNFc1iA5elgXvqkeXDjkzER9Yd3RF8qCg"
+     target="_blank" class="text-pink-600 underline font-medium">
+    Vai all'album su Google Foto
+  </a>
 </div>
 <div class='mt-10 flex justify-between'><a href='208--direzione-pemuteran.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='608--direzione-ubud.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
-    <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
-    <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
+  <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
+  <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
 </div>
 
 <script>
-    const key = "voto_" + window.location.pathname;
-    const starsEl = document.getElementById("stars");
+  const key = "voto_" + window.location.pathname;
+  const starsEl = document.getElementById("stars");
 
-    function renderStars(rating) {
-        starsEl.innerHTML = "";
-        for (let i = 1; i <= 5; i++) {
-            const star = document.createElement("span");
-            star.textContent = i <= rating ? "★" : "☆";
-            star.style.color = "#fbbf24";
-            star.onclick = () => {
-                localStorage.setItem(key, i);
-                renderStars(i);
-            };
-            starsEl.appendChild(star);
-        }
+  function renderStars(rating) {
+    starsEl.innerHTML = "";
+    for (let i = 1; i <= 5; i++) {
+      const star = document.createElement("span");
+      star.textContent = i <= rating ? "★" : "☆";
+      star.style.color = "#fbbf24";
+      star.onclick = () => {
+        localStorage.setItem(key, i);
+        renderStars(i);
+      };
+      starsEl.appendChild(star);
     }
+  }
 
-    renderStars(parseInt(localStorage.getItem(key)) || 0);
+  renderStars(parseInt(localStorage.getItem(key)) || 0);
 </script>
 </body></html>
