--- a/domenica---2707--direzione-jakarta.html
+++ b/domenica---2707--direzione-jakarta.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Domenica - 27/07 – Direzione Jakarta✈️</title>
-    <link href="static/tailwind.min.css" rel="stylesheet">
-    <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="static/icon.png">
-    <meta name="theme-color" content="#0f4c81">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Domenica - 27/07 – Direzione Jakarta✈️</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="manifest" href="manifest.json">
+  <link rel="icon" type="image/png" href="static/icon.png">
+  <meta name="theme-color" content="#0f4c81">
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
@@ -28,45 +28,46 @@
 <img src='static/volo.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Volo verso Jogykarta</p><p class='text-sm mb-1'>Scoot - N.Volo: TR270  - 16:15 - 17:10 - Durata volo 1h45'</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H2 - Citadines Connect Airport Jakarta - Check in dalle 14:00 - Transfer Incluso (1 notte - 27-28)</p><p class='text-sm mb-1'>jl. Husein Sastrabegara No.9 Cengkareng, 15127  Tangerang, Indonesia</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <p class='text-gray-600 break-words'>https://www.booking.com/hotel/id/citadines-connect-airport-jakarta.it.html?label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-65526620%3Alp9197847%3Ali%3Adec%3Adm&aid=2311236&ucfs=1&checkin=2025-07-27&checkout=2025-07-28&dest_id=-2699323&dest_type=city&group_adults=2&no_rooms=1&group_children=0&srpvid=6797476c1f1c0748&srepoch=1745835474&matching_block_id=110276317_394100051_2_0_0&atlas_src=sr_iw_title#tab-main</p>
+  <a href="https://www.booking.com/hotel/id/citadines-connect-airport-jakarta.it.html?label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-65526620%3Alp9197847%3Ali%3Adec%3Adm&aid=2311236&ucfs=1&checkin=2025-07-27&checkout=2025-07-28&dest_id=-2699323&dest_type=city&group_adults=2&no_rooms=1&group_children=0&srpvid=6797476c1f1c0748&srepoch=1745835474&matching_block_id=110276317_394100051_2_0_0&atlas_src=sr_iw_title#tab-main" target="_blank" class="text-blue-600 underline break-words">https://www.booking.com/hotel/id/citadines-connect-airport-jakarta.it.html?label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-65526620%3Alp9197847%3Ali%3Adec%3Adm&aid=2311236&ucfs=1&checkin=2025-07-27&checkout=2025-07-28&dest_id=-2699323&dest_type=city&group_adults=2&no_rooms=1&group_children=0&srpvid=6797476c1f1c0748&srepoch=1745835474&matching_block_id=110276317_394100051_2_0_0&atlas_src=sr_iw_title#tab-main</a>
 </details>
 </div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>Extra</p><p class='text-base font-semibold text-gray-800 mt-1'>📍Posizione hotel</p><p class='text-sm mb-1'>Visualizza su Google Maps</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <p class='text-gray-600 break-words'>https://maps.app.goo.gl/vz518VmtGwMqiP25A?g_st=com.google.maps.preview.copy</p>
+  <a href="https://maps.app.goo.gl/vz518VmtGwMqiP25A?g_st=com.google.maps.preview.copy" target="_blank" class="text-blue-600 underline break-words">https://maps.app.goo.gl/vz518VmtGwMqiP25A?g_st=com.google.maps.preview.copy</a>
 </details>
 </div>
 <div class='bg-pink-50 border border-pink-200 p-4 rounded-xl shadow mt-10'>
-    <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
-    <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
-    <a href="https://photos.google.com/share/AF1QipPip3bOnx8bNPVfWOa4WSU3Tb5oTgUc5uNFc1iA5elgXvqkeXDjkzER9Yd3RF8qCg" target="_blank" class="text-pink-600 underline font-medium">
-        Vai all'album su Google Foto
-    </a>
+  <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
+  <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
+  <a href="https://photos.google.com/share/AF1QipPip3bOnx8bNPVfWOa4WSU3Tb5oTgUc5uNFc1iA5elgXvqkeXDjkzER9Yd3RF8qCg"
+     target="_blank" class="text-pink-600 underline font-medium">
+    Vai all'album su Google Foto
+  </a>
 </div>
 <div class='mt-10 flex justify-between'><a href='sabato---2607--direzione-jakarta.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='lunedi---2807--yogykarta.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
-    <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
-    <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
+  <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
+  <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
 </div>
 
 <script>
-    const key = "voto_" + window.location.pathname;
-    const starsEl = document.getElementById("stars");
+  const key = "voto_" + window.location.pathname;
+  const starsEl = document.getElementById("stars");
 
-    function renderStars(rating) {
-        starsEl.innerHTML = "";
-        for (let i = 1; i <= 5; i++) {
-            const star = document.createElement("span");
-            star.textContent = i <= rating ? "★" : "☆";
-            star.style.color = "#fbbf24";
-            star.onclick = () => {
-                localStorage.setItem(key, i);
-                renderStars(i);
-            };
-            starsEl.appendChild(star);
-        }
+  function renderStars(rating) {
+    starsEl.innerHTML = "";
+    for (let i = 1; i <= 5; i++) {
+      const star = document.createElement("span");
+      star.textContent = i <= rating ? "★" : "☆";
+      star.style.color = "#fbbf24";
+      star.onclick = () => {
+        localStorage.setItem(key, i);
+        renderStars(i);
+      };
+      starsEl.appendChild(star);
     }
+  }
 
-    renderStars(parseInt(localStorage.getItem(key)) || 0);
+  renderStars(parseInt(localStorage.getItem(key)) || 0);
 </script>
 </body></html>
