Aggiorna layout, link e stile offline

--- a/martedì---2907--yogykarta---tempio-pranbanan-.html
+++ b/martedì---2907--yogykarta---tempio-pranbanan-.html
@@ -25,7 +25,7 @@
       });
   }
 </script>
-<img src='static/prambanan.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Grab/Tour privato</p><p class='text-sm mb-1'>Meglio nel pomeriggio</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Visita al tempio Pranbanan</p><p class='text-sm mb-1'>Biglietto di ingresso 25€ - Durata tragitto da Yogyakarta circa 2h - Durata visita circa 4h</p>
+<img src='static/prambanan.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Grab/Tour privato</p><p class='text-sm mb-1'>Meglio nel pomeriggio</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Visita al tempio Pranbanan al tramonto</p><p class='text-sm mb-1'>Orario apertura:6:30 - 17:00 (gli ingressi chiudono un'ora prima). Durata tragitto da Yogyakarta circa 2h - Durata visita circa 4h</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
   <a href="https://prambanan.injourneydestination.id/en/destination-info/" target="_blank" class="text-blue-600 underline break-words">https://prambanan.injourneydestination.id/en/destination-info/</a>
@@ -44,7 +44,7 @@
     Vai all'album su Google Foto
   </a>
 </div>
-<div class='mt-10 flex justify-between'><a href='lunedi---2807--yogykarta.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='3007--yogykarta---tempio-borobodur-.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
+<div class='mt-10 flex justify-between'><a href='lunedi---2807--yogykarta.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='mercoledì---3007--yogykarta---tempio-borobodur-.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
   <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
   <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
