--- a/domenica---1008--direzione-komodo.html
+++ b/domenica---1008--direzione-komodo.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>12/08 – Komodo🐊</title>
+  <title>Domenica - 10/08 – Direzione Komodo🐊</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="static/icon.png">
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
-<h1 class="text-2xl font-bold text-blue-700 mb-2">12/08 – Komodo🐊</h1>
+<h1 class="text-2xl font-bold text-blue-700 mb-2">Domenica - 10/08 – Direzione Komodo🐊</h1>
 <h2 class="text-lg text-gray-600 mb-4">Indonesia - Isola di Komodo🐊</h2>
 
 <script>
@@ -25,17 +25,12 @@
       });
   }
 </script>
-<img src='static/komodo.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Giornata libera</p><p class='text-sm mb-1'>mare</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H8 - Komodo shores (3 notti -  10-11 / 11-12 / 12-13) - Check in dalle 15:00 alle 18:00</p><p class='text-sm mb-1'>Jalan Parimata, 86711 Labuan Bajo, Indonesia - COLAZIONE INCLUSA</p>
+<img src='static/volo.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Viaggio da Ubud a Denpasar</p><p class='text-sm mb-1'>Taxi/Grab 1h - Partenza al mattino dopo colazione</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Volo per Labuan Badjo - 7:10 - 8:15</p><p class='text-sm mb-1'>1h5' - AirAsia - QZ644</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H8 - Komodo shores (3 notti -  10-11 / 11-12 / 12-13) - Check in dalle 15:00 alle 18:00</p><p class='text-sm mb-1'>Jalan Parimata, 86711 Labuan Bajo, Indonesia - COLAZIONE INCLUSA</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
   <a href="https://www.booking.com/hotel/id/komodo-shores-homestay.it.html?sid=8d556e6110f052ccee83efeda41f1853&aid=1260319&ucfs=1&checkin=2025-08-10&checkout=2025-08-13&dest_id=-2683993&dest_type=city&group_adults=2&no_rooms=1&group_children=0&nflt=fc%3D2&srpvid=94d28736dcf50256&srepoch=1746388220&matching_block_id=1317356502_407136234_2_1_0&atlas_src=sr_iw_title" target="_blank" class="text-blue-600 underline break-words">https://www.booking.com/hotel/id/komodo-shores-homestay.it.html?sid=8d556e6110f052ccee83efeda41f1853&aid=1260319&ucfs=1&checkin=2025-08-10&checkout=2025-08-13&dest_id=-2683993&dest_type=city&group_adults=2&no_rooms=1&group_children=0&nflt=fc%3D2&srpvid=94d28736dcf50256&srepoch=1746388220&matching_block_id=1317356502_407136234_2_1_0&atlas_src=sr_iw_title</a>
 </details>
-</div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>Extra</p><p class='text-base font-semibold text-gray-800 mt-1'>📍Posizione hotel</p><p class='text-sm mb-1'>Visualizza su Google Maps</p>
-<details class='text-sm mt-2'>
-  <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <a href="inserire link posizione" target="_blank" class="text-blue-600 underline break-words">inserire link posizione</a>
-</details>
-</div>
+</div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>Extra</p><p class='text-base font-semibold text-gray-800 mt-1'>📍Posizione hotel</p><p class='text-sm mb-1'>Visualizza su Google Maps</p></div>
 <div class='bg-pink-50 border border-pink-200 p-4 rounded-xl shadow mt-10'>
   <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
   <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
@@ -44,7 +39,7 @@
     Vai all'album su Google Foto
   </a>
 </div>
-<div class='mt-10 flex justify-between'><a href='lunedì---1108--komodo-.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='mercoledì---1308--padang-bai.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
+<div class='mt-10 flex justify-between'><a href='sabato---908--ubud.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='lunedì---1108--komodo-.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
   <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
   <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
