--- a/domenica-lunedì---17-1808--casa-.html
+++ b/domenica-lunedì---17-1808--casa-.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Giovedi - 24/07 – Scoperta di Gedda</title>
+  <title>Domenica, Lunedì - 17-18/08 – Casa 🏡</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="static/icon.png">
@@ -11,8 +11,8 @@
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
-<h1 class="text-2xl font-bold text-blue-700 mb-2">Giovedi - 24/07 – Scoperta di Gedda</h1>
-<h2 class="text-lg text-gray-600 mb-4">Arabia Saudita (Gedda)🇲🇴</h2>
+<h1 class="text-2xl font-bold text-blue-700 mb-2">Domenica, Lunedì - 17-18/08 – Casa 🏡</h1>
+<h2 class="text-lg text-gray-600 mb-4">Fine - Si torna a Casa!</h2>
 
 <script>
   if ('serviceWorker' in navigator) {
@@ -25,12 +25,7 @@
       });
   }
 </script>
-<img src='static/jedda.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Corniche - Fontana - Moschea galleggiante - Albalad</p><p class='text-sm mb-1'>Giornata a disposizione per visitare la città</p>
-<details class='text-sm mt-2'>
-  <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <a href="https://www.tripadvisor.it/Attractions-g295419-Activities-Jeddah_Makkah_Province.html" target="_blank" class="text-blue-600 underline break-words">https://www.tripadvisor.it/Attractions-g295419-Activities-Jeddah_Makkah_Province.html</a>
-</details>
-</div>
+<img src='static/volo.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Bali-Singapore - 19:40 - 22:15</p><p class='text-sm mb-1'>2h 35'- Scott - TR287 - Scalo (3h35')</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Singapore - Atene - 1:40 - 8:40</p><p class='text-sm mb-1'>11h 50' - Scott TR720 - Scalo 3h 20'</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'> Atene - Roma - 12:00 - 13:10</p><p class='text-sm mb-1'>2h 10'' - Ita airways AZ719</p></div>
 <div class='bg-pink-50 border border-pink-200 p-4 rounded-xl shadow mt-10'>
   <h3 class='text-lg font-semibold text-pink-800 mb-1'>📸 Album fotografico del viaggio</h3>
   <p class='text-sm mb-2'>Guarda o carica le foto del viaggio qui sotto:</p>
@@ -39,7 +34,7 @@
     Vai all'album su Google Foto
   </a>
 </div>
-<div class='mt-10 flex justify-between'><a href='mercoledi---2307--in-viaggio-verso-gedda.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='venerdi---2507--scoperta-di-gedda.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
+<div class='mt-10 flex justify-between'><a href='giovedì-venerdì-sabato---14-15-1608--padang-bai.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a></div>
 <div class="mt-10">
   <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
   <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
