Aggiorna layout, link e stile offline

--- a/1208--komodo.html
+++ b/1208--komodo.html
@@ -44,7 +44,7 @@
     Vai all'album su Google Foto
   </a>
 </div>
-<div class='mt-10 flex justify-between'><a href='lunedì---1108--komodo-.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='mercoledì---1308--padang-bai.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
+<div class='mt-10 flex justify-between'><a href='lunedì---1108--komodo-.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='mercoledì---1308--labuan-badjo---padang-bai.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
   <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
   <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
