--- a/mercoledì-608--pemuteran---ubud.html
+++ b/mercoledì-608--pemuteran---ubud.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Giovedì - 7/08 – Ubud🐒</title>
+  <title>Mercoledì 6/08 – Pemuteran - Ubud🐒</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="manifest" href="manifest.json">
   <link rel="icon" type="image/png" href="static/icon.png">
@@ -11,7 +11,7 @@
 </head>
 <body class="bg-gray-100 font-sans p-4">
 <a href="index.html" class="text-blue-500 underline mb-4 block">← Torna all'indice</a>
-<h1 class="text-2xl font-bold text-blue-700 mb-2">Giovedì - 7/08 – Ubud🐒</h1>
+<h1 class="text-2xl font-bold text-blue-700 mb-2">Mercoledì 6/08 – Pemuteran - Ubud🐒</h1>
 <h2 class="text-lg text-gray-600 mb-4">Indonesia - Ubud🐒</h2>
 
 <script>
@@ -25,12 +25,7 @@
       });
   }
 </script>
-<img src='static/ubud.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>goa gajah temple e Risaie</p><p class='text-sm mb-1'>Visita al Goa Gajah Temple e alle Risaie di Ubud</p>
-<details class='text-sm mt-2'>
-  <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
-  <a href="https://viaggioinindonesia.com/goa-gajah-bali/" target="_blank" class="text-blue-600 underline break-words">https://viaggioinindonesia.com/goa-gajah-bali/</a>
-</details>
-</div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H7 - Merthayasa Bungalow 2 (4 notti -  6-7 / 7-8 / 8-9 / 9-10) - Check in dalle 14:00 alle 23:00</p><p class='text-sm mb-1'>Jalan Hanoman, Gang Anila No. 23, 80571 Ubud, Indonesia - COLAZIONE INCLUSA</p>
+<img src='static/ubud.jpg' class='rounded-2xl shadow mb-6 w-full max-w-3xl mx-auto'><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🚂 Spostamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>Viaggio da Pemuteran a Ubud - Check out alle 11:00</p><p class='text-sm mb-1'>Taxi/Grab 3h - Partenza al mattino dopo colazione</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>📸 Attività</p><p class='text-base font-semibold text-gray-800 mt-1'>Riposo e giro in centro</p><p class='text-sm mb-1'>Monkey Forest - Ubud Palace - Ubud Market - Pura taman saraswati - Individuare tour per giorni successivi per vedere risaie</p></div><div class='bg-white p-4 mb-3 rounded-xl shadow'><p class='text-sm font-bold text-gray-700'>🛏️ Pernottamenti</p><p class='text-base font-semibold text-gray-800 mt-1'>H7 - Merthayasa Bungalow 2 (4 notti -  6-7 / 7-8 / 8-9 / 9-10) - Check in dalle 14:00 alle 23:00</p><p class='text-sm mb-1'>Jalan Hanoman, Gang Anila No. 23, 80571 Ubud, Indonesia - COLAZIONE INCLUSA</p>
 <details class='text-sm mt-2'>
   <summary class='text-blue-500 underline cursor-pointer'>🔗 Link utile (richiede internet)</summary>
   <a href="https://www.booking.com/hotel/id/merthayasa-bungalow-2-ubud1.it.html?aid=2311236&label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-65526620%3Alp1006094%3Ali%3Adec%3Adm&sid=8d556e6110f052ccee83efeda41f1853&all_sr_blocks=153463806_387788210_0_1_0_253951&checkin=2025-08-06&checkout=2025-08-10&dest_id=-2701757&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=2&highlighted_blocks=153463806_387788210_0_1_0_253951&hpos=2&matching_block_id=153463806_387788210_0_1_0_253951&nflt=review_score%3D80%3Bhotelfacility%3D433%3Bmealplan%3D1%3Bfc%3D2%3Bdistance%3D1000&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&sr_order=popularity&sr_pri_blocks=153463806_387788210_0_1_0_253951_200000000&srepoch=1746902181&srpvid=577f82a531f501d1&type=total&ucfs=1&activeTab=main" target="_blank" class="text-blue-600 underline break-words">https://www.booking.com/hotel/id/merthayasa-bungalow-2-ubud1.it.html?aid=2311236&label=it-fr-booking-desktop-ZjOK8gyoE3cnhKZSd8fqmgS652828999648%3Apl%3Ata%3Ap1%3Ap2%3Aac%3Aap%3Aneg%3Afi%3Atikwd-65526620%3Alp1006094%3Ali%3Adec%3Adm&sid=8d556e6110f052ccee83efeda41f1853&all_sr_blocks=153463806_387788210_0_1_0_253951&checkin=2025-08-06&checkout=2025-08-10&dest_id=-2701757&dest_type=city&dist=0&group_adults=2&group_children=0&hapos=2&highlighted_blocks=153463806_387788210_0_1_0_253951&hpos=2&matching_block_id=153463806_387788210_0_1_0_253951&nflt=review_score%3D80%3Bhotelfacility%3D433%3Bmealplan%3D1%3Bfc%3D2%3Bdistance%3D1000&no_rooms=1&req_adults=2&req_children=0&room1=A%2CA&sb_price_type=total&sr_order=popularity&sr_pri_blocks=153463806_387788210_0_1_0_253951_200000000&srepoch=1746902181&srpvid=577f82a531f501d1&type=total&ucfs=1&activeTab=main</a>
@@ -49,7 +44,7 @@
     Vai all'album su Google Foto
   </a>
 </div>
-<div class='mt-10 flex justify-between'><a href='mercoledì-608--pemuteran---ubud.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='venerdì---808--ubud.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
+<div class='mt-10 flex justify-between'><a href='domenica-lunedì-martedì---3-508--pemuteran.html' class='bg-gray-300 hover:bg-gray-400 text-gray-800 font-bold py-2 px-4 rounded-full'>← Giorno precedente</a><a href='giovedì---708--ubud.html' class='bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full'>Giorno successivo →</a></div>
 <div class="mt-10">
   <h3 class="text-lg font-semibold mb-2">⭐ Voto alla giornata</h3>
   <div id="stars" class="flex gap-2 text-3xl cursor-pointer select-none"></div>
